--- a/src/Tempus.App/index.html
+++ b/src/Tempus.App/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,400&family=Roboto+Slab:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite App</title>
   </head>
   <body class="bg-gray-800">
