--- a/src/Tempus.App/index.html
+++ b/src/Tempus.App/index.html
@@ -14,6 +14,7 @@
   </head>
   <body class="bg-gray-800">
     <div id="app"></div>
+    <div id="modals"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
